--- a/password.html
+++ b/password.html
@@ -171,7 +171,7 @@
     <script>
       // --- Gemini API 호출 함수 ---
       async function callGemini(prompt) {
-        const apiKey = ""; // Canvas 환경에서 자동으로 처리됩니다.
+        const apiKey = "AIzaSyDXwDCDb9lX5GOXKPIvajOx19SF0I4mMHc"; // Canvas 환경에서 자동으로 처리됩니다.
         const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
         try {
           const response = await fetch(apiUrl, {
